# volo-todo

./: Cargo.toml
idl/: volo-todo.proto
idl/volo.todo/: volo-todo.pb.go
src/: lib.rs
volo-gen/: volo.yml
